<resources>
    <string name="app_name">My Application4</string>

    <string name="InicioSesion"><b>¡Bienvenido!</b></string>
    <string name="menInicio">Inicia sesión para seguir tus progresos</string>
    <string name="cE">Correo electrónico</string>
    <string name="cntrsñ">Contraseña</string>
    <string name="ejemploCorreo">ejemplo@ejemplo.com</string>
    <string name="contraInicio">Contraseña</string>
    <string name="title_activity_home">HomeActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_consPerfil">Consultar Perfil</string>
    <string name="menu_modPerfil">Modificar Perfil</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_consumo">Registrar consumo</string>
    <string name="consultar_perfil">Consultar perfil</string>
    <string name="modificar_perfil">Modificar perfil</string>
    <string name="logout">Cerrar sesión</string>
    <string name="menu_registrarusuario">Registrar Usuario</string>

    <string name="registrarDatos"><b>REGISTRAR DATOS</b></string>
    <string name="nombrecompleto">Nombre</string>
    <string name="nombreusuario">Nombre de usuario</string>
    <string name="correousuario">Correo electrónico</string>
    <string name="cntrsñusuario">Contraseña</string>
    <string name="estatura">Estatura (cm)</string>
    <string name="sexo">Sexo</string>
    <string name="peso">Peso (Kg)</string>
    <string name="fechanacimiento">Fecha de nacimiento</string>
    <string name="fotografia">Sube una fotografìa</string>

    <string name="registrar"><b>REGISTRAR INFORMACIÓN</b></string>
    <string name="objetivos">Objetivos</string>
    <string name="calorias">Calorias</string>
    <string name="carbohidratos">Carbohidratos</string>
    <string name="grasas">Grasas</string>
    <string name="proteinas">Proteinas</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <!--Perfil-->
    <string name="tituloP">CONSULTAR PERFIL</string>
    <string name="btnModificarPerfil">Modificar perfil</string>
    <string name="btnGuardarModificacion">Guardar modificacion</string>
    <string name="tituloDiario">Diario de consumo</string>

    <string-array name="sexo_array">
        <item>Hombre</item>
        <item>Mujer</item>
    </string-array>

</resources>