<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".ui.perfil.ConsultarFragment">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="16dp">

            <TextView
                android:id="@+id/tituloP"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/tituloP"
                android:textSize="20sp"
                android:layout_margin="10dp"
                android:layout_gravity="center"
                android:textStyle="bold"
                android:textColor="@color/black" />

            <!--EditText
                android:id="@+id/search_bar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="Buscar por nombre"
                android:inputType="text"
                android:padding="12dp"
                android:textColor="#333"
                android:background="@drawable/edittext_background"
                android:layout_marginBottom="16dp"/-->

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_marginTop="20dp">

                <!-- Nombre completo -->
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/nombrecompleto"
                    android:textStyle="bold"
                    android:layout_marginBottom="4dp" />

                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/nombreInfoTextView"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:focusable="false"
                        android:clickable="false"
                        android:layout_marginBottom="10dp" />
                </com.google.android.material.textfield.TextInputLayout>

                <!-- Nombre de usuario -->
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/nombreusuario"
                    android:textStyle="bold"
                    android:layout_marginBottom="4dp" />

                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/nombre_usuarioInfoTextView"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:focusable="false"
                        android:clickable="false"
                        android:layout_marginBottom="10dp" />
                </com.google.android.material.textfield.TextInputLayout>

                <!-- Correo -->
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/correousuario"
                    android:textStyle="bold"
                    android:layout_marginBottom="4dp" />

                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/correoInfoTextView"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:focusable="false"
                        android:clickable="false"
                        android:layout_marginBottom="10dp" />
                </com.google.android.material.textfield.TextInputLayout>

                <!-- Repetir estructura para calorías, carbohidratos, grasas y proteínas -->
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/calorias"
                    android:textStyle="bold"
                    android:layout_marginBottom="4dp" />

                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/caloriasInfoTextView"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:focusable="false"
                        android:clickable="false" />
                </com.google.android.material.textfield.TextInputLayout>

                <!-- Repetir para carbohidratos, grasas y proteínas -->

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/carbohidratos"
                    android:textStyle="bold"
                    android:layout_marginBottom="4dp" />

                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/carbohidratosInfoTextView"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:focusable="false"
                        android:clickable="false" />
                </com.google.android.material.textfield.TextInputLayout>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/grasas"
                    android:textStyle="bold"
                    android:layout_marginBottom="4dp" />

                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/grasasInfoTextView"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:focusable="false"
                        android:clickable="false" />
                </com.google.android.material.textfield.TextInputLayout>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/proteinas"
                    android:textStyle="bold"
                    android:layout_marginBottom="4dp" />

                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/proteinasInfoTextView"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:focusable="false"
                        android:clickable="false" />
                </com.google.android.material.textfield.TextInputLayout>

                <Button
                    android:id="@+id/btnModificarPerfil"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/btnModificarPerfil"
                    android:textColor="@color/cardview_light_background"
                    android:layout_marginTop="15dp"
                    android:layout_marginBottom="5dp"/>

            </LinearLayout>
        </LinearLayout>
    </ScrollView>
</LinearLayout>
